# KalmanFusion

./: README.md
catkin_ws/: compile.sh  run.sh
catkin_ws/src/darknet_ros_msgs/msg/: BoundingBox3d.msg  BoundingBoxes3d.msg
catkin_ws/src/kitti_cpp/: CMakeLists.txt  analysis.txt  kitti.launch  kitti_cpp_config.rviz  package.xml
catkin_ws/src/kitti_cpp/include/: Detection.h  GroundRemove.h  ROI.h  Tracking.h  data_utils.h
catkin_ws/src/kitti_cpp/src/: Detection.cpp  GroundRemove.cpp  ROI.cpp  Tracking.cpp  data_utils.cpp  kitti_node.cpp
catkin_ws/src/kitti_pub/: CMakeLists.txt  comp_kitti.sh  kitti.launch  kitti_compile.sh  kitti_pub_config.rviz  package.xml
catkin_ws/src/kitti_pub/include/: data_utils.h  kitti_data_utils.hpp
catkin_ws/src/kitti_pub/src/: .ground_rem.cpp.swp  data_utils.cpp  kitti_pub.cpp
catkin_ws/src/sensor_fusion/: CMakeLists.txt  fusion.launch  fusion_config.rviz  kitti.launch  package.xml
catkin_ws/src/sensor_fusion/include/: Detection.h  ExtriParam.hpp  LinkList.hpp  Tracking.h  data_utils.h  data_utils.hpp  detection_fusion.h
catkin_ws/src/sensor_fusion/src/: Detection.cpp  SensorFusion.cpp  Tracking.cpp  detection_fusion.cpp  sensor_fusion.cpp
ros_ws/: run.sh
ros_ws/src/darknet_ros_msgs/: CMakeLists.txt  package.xml
ros_ws/src/darknet_ros_msgs/msg/: BoundingBox.msg  BoundingBox3d.msg  BoundingBoxes3d.msg
ros_ws/src/kitti_pub/: CMakeLists.txt  package.xml
ros_ws/src/kitti_pub/include/kitti_pub/: kitti_data_utils.hpp
ros_ws/src/kitti_pub/src/: kitti_pub.cpp
ros_ws/src/sensor_fusion/: CMakeLists.txt  mkdir.sh  package.xml
ros_ws/src/sensor_fusion/config/: fusion.rviz  sensor_fusion_subscribed_topic.yaml
ros_ws/src/sensor_fusion/include/sensor_fusion/: ExtriParam.hpp  GroundRemove.h  LinkList.hpp  Tracking.h  data_utils.hpp  detection_fusion.h
ros_ws/src/sensor_fusion/launch/: sensor_fusion_launch.py  sensor_fusion_launch.py.back
ros_ws/src/sensor_fusion/src/: GroundRemove.cpp  Tracking.cpp  detection_fusion.cpp  sensor_fusion.cpp
ros_ws/src/sensor_fusion/src/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
